refactor: 코드 깔끔하게 리팩터링